# brainer-app

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: operator-contract-spec.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agents_contract.rs  main.rs  workspaces.rs
src/lib/: cognitive.js  cognitive.test.js  workspaces.js  workspaces.test.js
