[package]
name = "brainer-app"
version = "0.1.0"
description = "Brainer desktop wizard"
authors = ["Brainer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
